# ChangeLog for app-portage/flagedit
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/flagedit/Attic/ChangeLog,v 1.22 2009/02/22 15:27:31 armin76 Exp $

  22 Feb 2009; Raúl Porcel <armin76@gentoo.org> flagedit-0.0.8.ebuild:
  x86 stable wrt #258247

  15 Feb 2009; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking flagedit-0.0.8 ppc for bug 258247

  15 Feb 2009; Brent Baude <ranger@gentoo.org> flagedit-0.0.8.ebuild:
  stable ppc, bug 258247

  13 Feb 2009; Thomas Anderson <gentoofan23@gentoo.org>
  flagedit-0.0.8.ebuild:
  stable amd64, bug 258247

  16 Jan 2009; <dams@gentoo.org> +flagedit-0.0.8.ebuild:
  make flagedit compatible with directories support of Portage >= 2.2 ( bug
  #241668 )

  16 Jan 2009; <dams@gentoo.org> ChangeLog:
  updated homepage and download urls
  updated copyrights

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  flagedit-0.0.7.ebuild:
  Stable on ppc.

  04 Jul 2007; Raúl Porcel <armin76@gentoo.org> flagedit-0.0.7.ebuild:
  x86 stable

  14 May 2007; Steve Dibb <beandog@gentoo.org> flagedit-0.0.7.ebuild:
  amd64 stable

  11 Jan 2007; Markus Rothe <corsair@gentoo.org> flagedit-0.0.7.ebuild:
  Added ~ppc64; bug #161464

  28 Nov 2006; Tiziano Müller <dev-zero@gentoo.org> flagedit-0.0.7.ebuild:
  ~x86-fbsd keyword added.

  25 Oct 2006; Damien Krotkine <dams@gentoo.org> -flagedit-0.0.2.ebuild,
  -flagedit-0.0.3.ebuild, -flagedit-0.0.4.ebuild:
  remove old versions

  28 May 2006; Thomas Cort <tcort@gentoo.org> flagedit-0.0.5.ebuild:
  Stable on amd64 wrt Bug #134636.

  15 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  flagedit-0.0.2.ebuild, flagedit-0.0.3.ebuild, flagedit-0.0.4.ebuild,
  flagedit-0.0.5.ebuild, flagedit-0.0.7.ebuild:
  Added IUSE var to ebuilds, no changes

*flagedit-0.0.7 (26 Dec 2005)

  26 Dec 2005; Damien Krotkine <dams@gentoo.org> +flagedit-0.0.7.ebuild:
  version bump
