@@ -1,8 +1,8 @@
 DIST flagedit-0.0.5.tar.bz2 5061 RMD160 36e133cabb7591a280c797d6f84e06e0aa8c573d SHA1 ab25163944f5eb93f9533a91f6e6184ff36ffa4a SHA256 e412b9b04a589a020316235d887d761bbb7a315608697eef652c509e714216ec
 DIST flagedit-0.0.7.tar.bz2 5955 RMD160 e38f744ce4ec405d700875aa7d7a3930cfe59d62 SHA1 5189248dd014800b434f279beda635dfe5c9e5ea SHA256 c8c8895fa1b3a3500cdbd3720ee7690edf9ef05266e26e4a2f6019c4a8b97890
 DIST flagedit-0.0.8.tar.bz2 5180 RMD160 20f16558d11fb744cea7e49dc03db966405b72bc SHA1 d7dcbe13100f67076d4a2c5ae79ee25a08f65ef0 SHA256 70f2979cf9a94cf98a8202044dc7ffe062fbee82d6dd57ad6d492b62138dd669
-EBUILD flagedit-0.0.5.ebuild 617 RMD160 a6cabdb6636ad6320c064a4a040de35a913a1117 SHA1 9b24141303d4a4fbc2fba2f3fe91cea89fc3cf15 SHA256 8fbdcb1bff8e11e64d9e92e9be9349c0b6d1da7bd3a70badbfe62c0202e5378c
-EBUILD flagedit-0.0.7.ebuild 634 RMD160 9f96a3900b883eda3f76537bbd683402ff6792eb SHA1 12360635f04988582706bb6e3aae7c15661e4fbd SHA256 d66d8cf7788b86a6919ea62809baf83d9b1b3a39fea28d3dc8da781b231879f5
-EBUILD flagedit-0.0.8.ebuild 637 RMD160 b0f95e1f71c7325c9da2d178ef77888b66d5102d SHA1 3f1dace315fa743c2e7a7d2145e60efe16968342 SHA256 969dd32d830fc0963bd2a884f410ddbc0bd1083ede8f67e88f07b29c5d96603b
-MISC ChangeLog 2740 RMD160 6c0fb299e3eef02efe9a534c4de6e595ba7f81f2 SHA1 22fe21ed04d28b5da33b1be86eee97bae3c96060 SHA256 656a1ed968be755a10b332e9e5d72e473a49a8f91dbd6538564a162894cc5392
+EBUILD flagedit-0.0.5.ebuild 642 RMD160 3da8e41889d7e03acb4639d2a236f956cdafbb12 SHA1 49204d848da5e6c9ee1ec84f95042966a9924fd3 SHA256 34cc35a724d9dd86f061007cb0c41a54f0b0df1e29fe223fafddd4838d21e98f
+EBUILD flagedit-0.0.7.ebuild 659 RMD160 861f7b222101709838b7fe4abd5463e14d4ce60e SHA1 a669ab3ce5971df1accfd8f5242fc69cbcd87ef1 SHA256 6e5269dafbe9a2f7d04e888bdde19dd66e4ce512fef944b7ca5e7091adcae256
+EBUILD flagedit-0.0.8.ebuild 659 RMD160 feea1dccfa252dc41fe2f30c7dc49c2c2b24a68c SHA1 bf89238d98d6a877341a4981e54afcad19865700 SHA256 e4a01c239da6548793c07d993a3ceecd34a629cf64a76b599b21157adb78a1b4
+MISC ChangeLog 2891 RMD160 d5cea096a5f13933555cb97f819fa3c5bb63270c SHA1 ef25e4a594b0cc861706359188c1d9266f0e4911 SHA256 7328302a7142978ff1394d29cc83310ee7c0e0ce1d11e03c5430590785ff7cd5
 MISC metadata.xml 251 RMD160 3e767077840a03aa6206a2d92b05902c9fd8dc28 SHA1 13fc383c5d5fc57c61b93a67a63967bdcc4f1ac8 SHA256 5bf57c433e27f83dc12c95ec8e3723c6f2af3fd6752a7ecdb2f0a0a96d38dcb4
